--- a/CarRacing/Base.lproj/Main.storyboard
+++ b/CarRacing/Base.lproj/Main.storyboard
@@ -75,10 +75,10 @@
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <gestureRecognizers/>
                                 </view>
-                                <blurEffect style="regular"/>
+                                <blurEffect style="dark"/>
                             </visualEffectView>
                             <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Bsc-51-fOO">
-                                <rect key="frame" x="0.0" y="0.0" width="180" height="896"/>
+                                <rect key="frame" x="0.0" y="34" width="180" height="862"/>
                                 <subviews>
                                     <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cd8-Wv-CFc">
                                         <rect key="frame" x="0.0" y="0.0" width="180" height="862"/>
@@ -90,15 +90,15 @@
                                                         <rect key="frame" x="0.0" y="0.0" width="180" height="172.5"/>
                                                         <subviews>
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="x2p-s5-QxT">
-                                                                <rect key="frame" x="20" y="21.5" width="140" height="130"/>
+                                                                <rect key="frame" x="50" y="51.5" width="80" height="70"/>
                                                             </imageView>
                                                         </subviews>
                                                         <color key="backgroundColor" systemColor="systemBrownColor"/>
                                                         <constraints>
-                                                            <constraint firstItem="x2p-s5-QxT" firstAttribute="top" secondItem="doh-A9-vxt" secondAttribute="top" constant="20" id="9Ro-3z-yDL"/>
-                                                            <constraint firstAttribute="trailing" secondItem="x2p-s5-QxT" secondAttribute="trailing" constant="20" id="f4m-4j-RJf"/>
-                                                            <constraint firstAttribute="bottom" secondItem="x2p-s5-QxT" secondAttribute="bottom" constant="20" id="jUV-NG-9jm"/>
-                                                            <constraint firstItem="x2p-s5-QxT" firstAttribute="leading" secondItem="doh-A9-vxt" secondAttribute="leading" constant="20" id="oke-Yp-CHv"/>
+                                                            <constraint firstItem="x2p-s5-QxT" firstAttribute="top" secondItem="doh-A9-vxt" secondAttribute="top" constant="50" id="9Ro-3z-yDL"/>
+                                                            <constraint firstAttribute="trailing" secondItem="x2p-s5-QxT" secondAttribute="trailing" constant="50" id="f4m-4j-RJf"/>
+                                                            <constraint firstAttribute="bottom" secondItem="x2p-s5-QxT" secondAttribute="bottom" constant="50" id="jUV-NG-9jm"/>
+                                                            <constraint firstItem="x2p-s5-QxT" firstAttribute="leading" secondItem="doh-A9-vxt" secondAttribute="leading" constant="50" id="oke-Yp-CHv"/>
                                                         </constraints>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5ea-ih-UQX">
