--- a/CarRacing/Base.lproj/Main.storyboard
+++ b/CarRacing/Base.lproj/Main.storyboard
@@ -66,6 +66,7 @@
                                 </buttonConfiguration>
                                 <connections>
                                     <action selector="startGame:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4vY-iN-tpF"/>
+                                    <segue destination="EAO-6v-OEo" kind="show" id="FF4-3B-U3C"/>
                                 </connections>
                             </button>
                             <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xHJ-Qr-KU3">
@@ -84,13 +85,13 @@
                                         <rect key="frame" x="0.0" y="0.0" width="180" height="872"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Jwr-Ef-A4b">
-                                                <rect key="frame" x="0.0" y="-2.6666666666666856" width="180" height="876"/>
+                                                <rect key="frame" x="0.0" y="-2.6666666666666856" width="180" height="874.66666666666674"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="doh-A9-vxt">
-                                                        <rect key="frame" x="0.0" y="0.0" width="180" height="175.33333333333334"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="180" height="175"/>
                                                         <subviews>
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="x2p-s5-QxT">
-                                                                <rect key="frame" x="10" y="11.666666666666671" width="160" height="152.66666666666671"/>
+                                                                <rect key="frame" x="10" y="11.666666666666671" width="160" height="152.33333333333334"/>
                                                             </imageView>
                                                         </subviews>
                                                         <color key="backgroundColor" systemColor="systemBrownColor"/>
@@ -102,7 +103,7 @@
                                                         </constraints>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5ea-ih-UQX">
-                                                        <rect key="frame" x="0.0" y="175.33333333333331" width="180" height="175"/>
+                                                        <rect key="frame" x="0.0" y="175" width="180" height="175"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nickname" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4b6-Tm-zft">
                                                                 <rect key="frame" x="52" y="77.333333333333343" width="76" height="20.333333333333329"/>
@@ -118,10 +119,10 @@
                                                         </constraints>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xct-V2-eab">
-                                                        <rect key="frame" x="0.0" y="350.33333333333337" width="180" height="175.33333333333337"/>
+                                                        <rect key="frame" x="0.0" y="350" width="180" height="174.66666666666663"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="200 games" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1lo-I9-fCA">
-                                                                <rect key="frame" x="47" y="77.666666666666629" width="86" height="20.333333333333329"/>
+                                                                <rect key="frame" x="47" y="77.333333333333371" width="86" height="20.333333333333329"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                 <nil key="textColor"/>
                                                                 <nil key="highlightedColor"/>
@@ -134,7 +135,7 @@
                                                         </constraints>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bjb-yt-4Uy">
-                                                        <rect key="frame" x="0.0" y="525.66666666666663" width="180" height="175"/>
+                                                        <rect key="frame" x="0.0" y="524.66666666666663" width="180" height="175"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your record : 54" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Ki-Ol-1Je">
                                                                 <rect key="frame" x="28.999999999999993" y="77.333333333333371" width="122.33333333333331" height="20.333333333333329"/>
@@ -150,7 +151,7 @@
                                                         </constraints>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YWR-g5-NFi">
-                                                        <rect key="frame" x="0.0" y="700.66666666666663" width="180" height="175.33333333333337"/>
+                                                        <rect key="frame" x="0.0" y="699.66666666666663" width="180" height="175"/>
                                                         <subviews>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8f6-Hq-AWI">
                                                                 <rect key="frame" x="52.333333333333336" y="72.333333333333371" width="75.333333333333314" height="30.666666666666671"/>
@@ -452,7 +453,78 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mGt-2C-PHs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="820.09345794392516" y="81.641468682505405"/>
+            <point key="canvasLocation" x="726" y="-627"/>
+        </scene>
+        <!--Game View Controller-->
+        <scene sceneID="AOs-9o-757">
+            <objects>
+                <viewController id="EAO-6v-OEo" customClass="GameViewController" customModule="CarRacing" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="shD-s5-HKd">
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="872"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BurgerMenu" translatesAutoresizingMaskIntoConstraints="NO" id="2YO-Vp-Lsn">
+                                <rect key="frame" x="20" y="724" width="128" height="128"/>
+                                <gestureRecognizers/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="j2U-sg-j1T"/>
+                                    <constraint firstAttribute="width" secondItem="2YO-Vp-Lsn" secondAttribute="height" id="o7e-Se-YVz"/>
+                                </constraints>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="wXx-Dv-p33" appends="YES" id="2UM-Px-8LT"/>
+                                    <outletCollection property="gestureRecognizers" destination="8aO-fO-PHq" appends="YES" id="aCK-R7-YbG"/>
+                                </connections>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="GameLogo" translatesAutoresizingMaskIntoConstraints="NO" id="UHY-MR-F1z">
+                                <rect key="frame" x="20" y="44" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="UHY-MR-F1z" secondAttribute="height" id="9UW-JE-3Dc"/>
+                                    <constraint firstAttribute="width" constant="100" id="ETf-D4-j70"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="cKJ-Tq-AEd"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <gestureRecognizers/>
+                        <constraints>
+                            <constraint firstItem="UHY-MR-F1z" firstAttribute="leading" secondItem="cKJ-Tq-AEd" secondAttribute="leading" constant="20" id="Mfn-oS-nuC"/>
+                            <constraint firstItem="UHY-MR-F1z" firstAttribute="top" secondItem="cKJ-Tq-AEd" secondAttribute="top" id="cEf-a3-ipA"/>
+                            <constraint firstItem="2YO-Vp-Lsn" firstAttribute="leading" secondItem="cKJ-Tq-AEd" secondAttribute="leading" constant="20" id="fv3-v4-Xu8"/>
+                            <constraint firstItem="cKJ-Tq-AEd" firstAttribute="bottom" secondItem="2YO-Vp-Lsn" secondAttribute="bottom" constant="20" id="qeF-yV-2VG"/>
+                        </constraints>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="QNb-Xc-LVY" appends="YES" id="8QO-Eo-6Uw"/>
+                        </connections>
+                    </view>
+                    <navigationItem key="navigationItem" id="5Cl-D1-HpQ"/>
+                    <connections>
+                        <outlet property="barrierImage" destination="UHY-MR-F1z" id="AHn-fu-zUN"/>
+                        <outlet property="barrierLeading" destination="Mfn-oS-nuC" id="NGF-fN-w3Y"/>
+                        <outlet property="barrierTop" destination="cEf-a3-ipA" id="pGY-tg-EnW"/>
+                        <outlet property="barrierWidth" destination="ETf-D4-j70" id="dbx-uA-XCL"/>
+                        <outlet property="carHeight" destination="j2U-sg-j1T" id="hwp-Nz-5TE"/>
+                        <outlet property="carImage" destination="2YO-Vp-Lsn" id="rmA-W5-bdq"/>
+                        <outlet property="carLeading" destination="fv3-v4-Xu8" id="2Hh-1t-ua0"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AFy-AR-T6S" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <swipeGestureRecognizer direction="right" id="wXx-Dv-p33">
+                    <connections>
+                        <action selector="rightSwipe:" destination="EAO-6v-OEo" id="0Dh-GF-Ybh"/>
+                    </connections>
+                </swipeGestureRecognizer>
+                <swipeGestureRecognizer direction="left" id="8aO-fO-PHq">
+                    <connections>
+                        <action selector="leftSwipe:" destination="EAO-6v-OEo" id="JdK-ER-Pa4"/>
+                    </connections>
+                </swipeGestureRecognizer>
+                <tapGestureRecognizer id="QNb-Xc-LVY">
+                    <connections>
+                        <action selector="tapAction:" destination="EAO-6v-OEo" id="UWg-pu-saP"/>
+                    </connections>
+                </tapGestureRecognizer>
+            </objects>
+            <point key="canvasLocation" x="809" y="82"/>
         </scene>
     </scenes>
     <resources>
