--- a/CarRacing/Base.lproj/Main.storyboard
+++ b/CarRacing/Base.lproj/Main.storyboard
@@ -193,13 +193,23 @@
                                                                     <segue destination="Eiy-65-1Kd" kind="push" id="650-Qw-y0r"/>
                                                                 </connections>
                                                             </button>
+                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W50-TO-wLn">
+                                                                <rect key="frame" x="10.000000000000004" y="72.333333333333371" width="45.333333333333343" height="30.666666666666671"/>
+                                                                <state key="normal" title="Button"/>
+                                                                <buttonConfiguration key="configuration" style="plain" image="square.and.arrow.up.circle.fill" catalog="system"/>
+                                                                <connections>
+                                                                    <action selector="callToDeveloper:" destination="BYZ-38-t0r" eventType="touchUpInside" id="TCK-Vm-bKp"/>
+                                                                </connections>
+                                                            </button>
                                                         </subviews>
                                                         <color key="backgroundColor" systemColor="systemPurpleColor"/>
                                                         <constraints>
+                                                            <constraint firstItem="W50-TO-wLn" firstAttribute="leading" secondItem="YWR-g5-NFi" secondAttribute="leading" constant="10" id="2MM-W2-OW8"/>
                                                             <constraint firstItem="8f6-Hq-AWI" firstAttribute="centerY" secondItem="YWR-g5-NFi" secondAttribute="centerY" multiplier="1.5" id="VrS-dX-QkP"/>
                                                             <constraint firstItem="a1i-V7-8yY" firstAttribute="centerX" secondItem="YWR-g5-NFi" secondAttribute="centerX" id="ePD-q1-fRJ"/>
                                                             <constraint firstItem="8f6-Hq-AWI" firstAttribute="centerX" secondItem="YWR-g5-NFi" secondAttribute="centerX" id="hJT-RW-kWx"/>
                                                             <constraint firstItem="a1i-V7-8yY" firstAttribute="centerY" secondItem="YWR-g5-NFi" secondAttribute="centerY" multiplier="0.5" id="thf-Cp-GTK"/>
+                                                            <constraint firstItem="W50-TO-wLn" firstAttribute="centerY" secondItem="YWR-g5-NFi" secondAttribute="centerY" id="vLq-qM-WqO"/>
                                                         </constraints>
                                                     </view>
                                                 </subviews>
@@ -607,6 +617,7 @@
         <image name="BurgerMenu" width="30" height="30"/>
         <image name="GameLogo" width="622.33331298828125" height="435.66665649414062"/>
         <image name="person" catalog="system" width="128" height="117"/>
+        <image name="square.and.arrow.up.circle.fill" catalog="system" width="128" height="121"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
